# ladybird-browser

./: .gitignore  CMakePresets.json  args.gn  vcpkg.json
.devcontainer/alpine-ci/: Dockerfile  devcontainer.json
.devcontainer/features/gn/: devcontainer-feature.json  install.sh
.devcontainer/features/ladybird/: install-alpine.sh
.github/actions/setup/: action.yml
.github/workflows/: ci-windows.yml  flatpak-template.yml  js-artifacts.yml  lagom-template.yml  nightly-lagom.yml  nightly-linux.yml  nightly-swift.yml  nightly-windows.yml  temp.yml
AK/: Assertions.cpp
Ladybird/: CMakeLists.txt
Ladybird/ImageDecoder/: CMakeLists.txt
Ladybird/RequestServer/: CMakeLists.txt
Ladybird/WebContent/: CMakeLists.txt
Ladybird/WebDriver/: CMakeLists.txt
Ladybird/WebWorker/: CMakeLists.txt
Ladybird/cmake/: InstallRules.cmake
Libraries/LibCore/: MachPort.cpp  MachPort.h
Libraries/LibGC/: Heap.cpp  Heap.h  Ptr.h
Libraries/LibIPC/: CMakeLists.txt  Forward.h  MachPort+Bootstrap.swift  Message.cpp  Transport.h  TransportMach.cpp  TransportMach.h  TransportMach.swift  TransportSocket.cpp  TransportSocket.h
Libraries/LibJS/: CyclicModule.h
Libraries/LibJS/Runtime/: ExecutionContext.h  Promise.h  VM.h
Libraries/LibJS/Tests/builtins/Error/: Error.prototype.stack.js
Libraries/LibTest/: AssertionHandler.cpp  JavaScriptTestRunnerMain.cpp  Macros.h  TestCase.h  TestRunnerUtil.h  TestSuite.h
Libraries/LibUnicode/: TimeZone.cpp
Libraries/LibWeb/: CMakeLists.txt  Forward.h  idl_files.cmake
Libraries/LibWeb/ContentSecurityPolicy/: Policy.h
Libraries/LibWeb/HTML/EventLoop/: EventLoop.h  TaskQueue.h
Libraries/LibWeb/HTML/Parser/: HTMLParser.cpp
Libraries/LibWeb/WebGL/: OpenGLContext.cpp  WebGLRenderingContext.cpp
Libraries/LibWebSocket/: WebSocket.cpp
Meta/: ladybird.py  ladybird.sh
Meta/CMake/: common_options.cmake  swift_system.cmake
Meta/CMake/Swift/: GenerateSwiftHeader.cmake  swift-settings.cmake
Meta/CMake/flatpak/: angle-checkout.sh  angle-configure.sh  angle-install.sh  org.ladybird.Ladybird.json  skia-configure.sh  skia-install.sh
Meta/CMake/flatpak/angle/: angle-configure.sh  arm64-toolchain.gn
Meta/CMake/patches/swift-system/: 0001-CMake-Remove-top-level-binary-module-locations.patch  0002-CSystem-Set-build-and-install-interfaces-on-included.patch
Meta/CMake/vcpkg/base-triplets/: base.cmake
Meta/CMake/vcpkg/overlay-ports/angle/: portfile.cmake  vcpkg.json
Meta/CMake/vcpkg/overlay-ports/angle/cmake-buildsystem/: CMakeLists.txt
Meta/Lagom/: CMakeLists.txt
Meta/Lagom/Tools/CodeGenerators/LibWeb/: GenerateWebGLRenderingContext.cpp
Services/RequestServer/: CMakeLists.txt  ConnectionFromClient.cpp  WebSocketImplCurl.cpp  WebSocketImplCurl.h
Tests/: CMakeLists.txt
Tests/AK/: TestAKBindings.swift
Tests/LibCore/: CMakeLists.txt  TestMachPort.cpp
Tests/LibGC/: CMakeLists.txt  TestGCPtr.cpp
Tests/LibJS/: CMakeLists.txt  test-js.cpp
Tests/LibUnicode/: CMakeLists.txt  TestTimeZone.cpp
Toolchain/: BuildVcpkg.py
Userland/Libraries/LibWeb/HTML/: HTMLMediaElement.cpp  PromiseRejectionEvent.idl
Userland/Libraries/LibWeb/WebAudio/: AudioContext.cpp
Userland/Libraries/LibWeb/WebDriver/: ExecuteScript.cpp
